apps/base/twitch-vod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: twitch-vod
    labels:
        app.kubernetes.io/name: twitch-vod
        app.kubernetes.io/instance: twitch-vod
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: twitch-vod
            app.kubernetes.io/instance: twitch-vod
    template:
        metadata:
            labels:
                app.kubernetes.io/name: twitch-vod
                app.kubernetes.io/instance: twitch-vod
        spec:
            containers:
                - name: twitch-vod
                  image: mrbrax/twitchautomator:master
                  imagePullPolicy: Always
                  securityContext:
                    runAsUser: 10001
                    runAsGroup: 10001
                    fsGroup: 10001
                  ports:
                    - name: http
                      containerPort: 8080
                      protocol: TCP
                  livenessProbe:
                    httpGet:
                        path: /
                        port: http
                  readinessProbe:
                    httpGet:
                        path: /
                        port: http
                  volumeMounts:
                    - mountPath: /usr/local/share/twitchautomator/data
                      name: twitch-vod-data
                    - mountPath: /usr/local/share/twitchautomator/public
                      name: builddir
            volumes:
                - name: twitch-vod-data
                  persistentVolumeClaim:
                    claimName: twitch-vod-data
                # Emptydir for build
                - name: builddir
                  emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
    name: twitch-vod
    labels:
        app.kubernetes.io/name: twitch-vod
        app.kubernetes.io/instance: twitch-vod
spec:
    ports:
        - name: http
          port: 8080
          targetPort: http
    selector:
        app.kubernetes.io/name: twitch-vod
        app.kubernetes.io/instance: twitch-vod
---
# Ingress for bugzilla
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: twitch-vod
    labels:
        app.kubernetes.io/name: twitch-vod
        app.kubernetes.io/instance: twitch-vod
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-dns
        external-dns.alpha.kubernetes.io/hostname: midnightthoughts.space
spec:
    rules:
        - host: twitch-vod.midnightthoughts.space
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: twitch-vod
                        port:
                            number: 8080
    tls:
        - hosts:
            - twitch-vod.midnightthoughts.space
          secretName: twitch-vod-tls
